--- a/views/listRate.ejs
+++ b/views/listRate.ejs
@@ -9,9 +9,7 @@
 	
   </head>
   <body>
-	<% if (messages.success){%>
-        <p class="alert alert-success mt-4"><%- messages.success %></p>
-    <%}%>
+	
     <h1>Procurement JTMK</h1>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 	<nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -24,50 +22,55 @@
 	      <div class="navbar-nav">
 	        <a class="nav-link active" aria-current="page" href="/">Home</a>
 	        <a class="nav-link" href="/registers">Register New</a>    
-			<a class="nav-link" href="#">View rates for the activities</a>       
+			<a class="nav-link" href="#">Activity List</a>       
 	      </div>
 	    </div>
 	  </div>
 	</nav>
+    <div style="padding-top: 10px; padding-right: 20px; padding-bottom: 15px; padding-left: 25px;">
+     <div class="input-group mb-3 mx-auto w-25"  >
+        <input type="text" class="form-control" id="search-input" placeholder="Search name of the activity..."style="width: 30%; ">
+        <div class="input-group-append">
+          <button class="btn btn-primary" id="search-btn">Search</button>
+        </div>
+      </div>
+    </div>
 	<br>
 	<div class="container my-3 col-md-9">
 				<table id="myTable" style="height: 300px; overflow-y: auto;" class="table table-striped table-bordered ">
 				  <thead>
 				    <tr>
-				      <th scope="col">Id</th>
+				      <th scope="col">Activity Id</th>
 				      <th scope="col">Activity Name</th>
-					  <th scope="col">Date</th>
-				      <th scope="col">Duration</th>
-				      <th scope="col">Location</th>
-					  <th scope="col">PIC</th>
+                      <th scope="col">Activity Resource</th>
+					  <th scope="col">Rate for Quality</th>
+				      <th scope="col">Rate for Delivery</th>
+				      <th scope="col">Rate for Support</th>  
 				    </tr>
 				  </thead>
 				  <tbody>
-					<% acts.forEach((act)=>{%>
+                    <% activities.forEach((acti)=>{%>
                         <tr>
-                          
-                            <td><%=act.id%></td>
-                            <td><%=act.activity%></td>
-                            <td><%=act.date%></td>
-                            <td><%=act.duration%></td>
-                            <td><%=act.location%></td>
-                            <td><%=act.pic%></td>
-							<td><a href="/updateAct/<%=act.id%>" ><i class="fa fa-pencil fa-fw ms-4"></i></a>
-								<a style="color:red" href="/delete/<%=act.id%>"><i class="fa fa-trash ms-4" ></i></a>
-								<a href="/updateRate/<%= act.id %>" ><i class="fa fa-star fa-fw ms-4"></i></a>      
-								<a href="/updateRes/<%= act.id %>" ><i class="fa fa-money fa-fw ms-4"></i></a>
-							</td>                  
+                            <td><%= acti.id%></td>
+                            <td><%= acti.activity%></td>
+                            <% if (acti.Resource) { %>
+                            <td><%= acti.Resource.name %></td>
+                            <td><%= acti.Resource.rateQuality %></td>
+                            <td><%= acti.Resource.rateDelivery %></td>
+                            <td><%= acti.Resource.rateSupport %></td>	
+                            <% } else { %>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                              <% } %>	                  
                         </tr>
                         <%});%>
+				
                      
 				  </tbody>
 				</table>
-				<% if (currentPage > 1) { %>
-					<a href="/display?page=<%= currentPage - 1 %>">Previous</a>
-				<% } %>
-				<% if (acts.length === 10) { %>
-				<a href="/display?page=<%= currentPage + 1 %>">Next</a>
-				<% } %>
+				
 			</div>
 			
   </body>
